--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 cupy-cuda12x
 matplotlib
-moviepy
-numpy
-opencv-python
+moviepy>=1.0.3
+numpy>=1.16, <=1.23.5
+opencv-python>=4.1.2
 rawpy
 scipy
 scikit-video
 scikit-image
-torch
-torchvision
-tqdm
+torch>=1.3.0
+torchvision>=0.7.0
+tqdm>=4.35.0
 tensorboard
 lpips
+sk-video>=1.1.10
